# orbuz

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  schema.py
_tests/: test_retry_loop.py
agents/: background-researcher.yaml  ce-adversarial-reviewer.yaml  ce-agent-native-reviewer.yaml  ce-api-contract-reviewer.yaml  ce-architecture-strategist.yaml  ce-code-simplicity-reviewer.yaml  ce-correctness-reviewer.yaml  ce-data-migration-reviewer.yaml  ce-deployment-verification-agent.yaml  ce-learnings-researcher.yaml  ce-maintainability-reviewer.yaml  ce-performance-reviewer.yaml  ce-previous-comments-reviewer.yaml  ce-project-standards-reviewer.yaml  ce-reliability-reviewer.yaml  ce-security-reviewer.yaml  ce-session-historian.yaml  ce-swift-ios-reviewer.yaml  ce-testing-reviewer.yaml  code-reviewer.yaml  codegen-compiler.yaml  codegen-planner.yaml  codegen-reporter.yaml  codegen-writer.yaml  competitive-intel.yaml  data-analyst.yaml  debugger.yaml  deep-researcher.yaml  documentation-writer.yaml  editor.yaml  fact-checker.yaml  index.yaml  media-researcher.yaml  merge-agent.yaml  official-researcher.yaml  paper-analyst.yaml  security-auditor.yaml  synthesizer.yaml  test-writer.yaml  writer.yaml
examples/: simulation-ai-chip.md
orbuz/: __init__.py
orbuz/agent/: memory.py  message.py  registry.py
orbuz/agents/: __init__.py  background-researcher.yaml  ce-adversarial-reviewer.yaml  ce-architecture-strategist.yaml  debugger.yaml  (+24 more)
samples/: add_fixing_date.yaml  rustpricer_CODEGEN.md
tests/: test_all_modules.py
workflows/: code-review.yaml  deep-research.yaml
(+28 files in other folders)
