[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "orbuz-agent-workflow"
version = "0.1.0"
description = "Multi-agent workflow runtime — Orchestrator → plan → execute → deliver"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0",
    "pyyaml>=6.0",
]

[project.scripts]
orbuz = "orbuz.cli.main:main"

[tool.setuptools.packages.find]
include = ["orbuz*"]
